fix/fix mobile version on iphone

--- a/src/components/CountDownTimer.css
+++ b/src/components/CountDownTimer.css
@@ -33,6 +33,8 @@ body {
   height: fit-content;
   max-width: 100vw;
   margin: 2rem 0;
+  display: flex;
+  justify-content: center;
 }
 
 .countdown-date {
@@ -82,12 +84,10 @@ body {
 }
 
 .countdown-value > span {
-  display: relative;
   color: #9F2042;
   font-size: 0.8rem;
   letter-spacing: 2px;
   text-transform: uppercase;
-  bottom: 1vh;
 }
 
 @media only screen and (max-width: 600px) {
@@ -102,9 +102,13 @@ body {
   }
 
   .countdown-value:not(span) {
-    font-size: 46px;
-    width: 120px;
-    height: 120px;
+    font-size: 40px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .countdown-value > span {
+    font-size: 0.6rem;
   }
 
   .countdown-value > p {
